<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@color/background"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/gradient"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="28sp"
                android:text="@string/information">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/purpose">
            </TextView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="28sp"
                android:text="@string/scanning_tutorial">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/how_to_scan"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/progress_bar"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/when_scanned_1"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="28sp"
                android:text="@string/solving_tutorial">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/when_scanned_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/controls"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/auto_play"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="28sp"
                android:text="@string/troubleshooting">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/no_progress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/lighting_conditions"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/restart_tip"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="28sp"
                android:text="@string/faq_title">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/faq_q1"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/faq_a1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/faq_q2"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/faq_a2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/faq_q3"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:text="@string/faq_a3"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
