<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/gradient"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:text="@string/about_title"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="@string/version_number"
                android:textAlignment="center"
                android:textSize="16sp" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                app:cardBackgroundColor="@color/move_button_alt"
                app:contentPadding="20dp"
                android:clickable="true"
                android:id="@+id/changelogCard"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/changelog_title"
                    android:textSize="22sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changelogBtn"
                    android:paddingStart = "16dp"
                    android:paddingEnd = "24dp"
                    android:background="#00000000"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/right_arrow"
                    app:iconPadding="0dp"
                    android:clickable="false">

                </com.google.android.material.button.MaterialButton>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/credits_title"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/credits_body"
                android:textSize="15sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/libraries_title"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/libraries_body"
                android:textSize="15sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/licensing_title"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="monospace"
                    android:text='@string/licensing_body'
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="#49454F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/privacy_policy_title"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/privacy_policy"
                android:textSize="15sp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>
