<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    style="@style/Theme.LazyCubeApp.NoActionBar">
    <androidx.camera.view.PreviewView
        android:id="@+id/camPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/boxes"
        app:scaleType="fillStart" >
    </androidx.camera.view.PreviewView>
    <RelativeLayout
        android:id="@+id/rounded_camera_corners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/boxes"
        android:background="@drawable/bottom_rounded_camera">
    </RelativeLayout>

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/gradient" />

    <TextView
        android:id="@+id/scanning_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="83dp"
        android:textSize="24dp"
        android:text="@string/scanning_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/scanning_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanning_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:textSize="14dp"
        android:text="@string/scanning_subtitle"
        android:textStyle="bold"
        android:textColor="#979797"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsButton"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:duplicateParentState="false"
        android:enabled="true"
        android:src="@drawable/settings_icon"
        app:toggleCheckedStateOnClick="false" />

    <FrameLayout
        android:id="@+id/tapParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/tap_focus_anim"
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:lottie_autoPlay="false"
            app:lottie_rawRes="@raw/focus_animation"
            app:lottie_loop="false" />
    </FrameLayout>

    <com.uon.lazycube.ArOverlay
        android:id="@+id/arOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/boxes"
        />

    <com.uon.lazycube.BoundingBoxOverlay
        android:id="@+id/boundingBoxOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/boxes" />

    <ImageView
        android:id="@+id/scan_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restart_btn"
        android:layout_below="@+id/scanning_subtitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:srcCompat="@drawable/subtract_2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/boxes"
        android:layout_alignParentEnd="true"
        android:layout_margin="25dp"
        android:src="@drawable/rescan_icon"
        app:elevation="6dp"
        app:borderWidth="0dp"
        android:contentDescription="floatingRescan">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <LinearLayout
        android:id="@+id/boxes"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:animateLayoutChanges="true"
        android:background="@color/background"
        android:transitionName="bottombar">
        <ImageView
            android:id="@+id/yellowSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_square"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/whiteSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_square"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/redSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_square"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/orangeSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_square"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/blueSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_square"
            android:layout_margin="10dp"/>f
        <ImageView
            android:id="@+id/greenSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_square"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/solveBtn"
            android:theme="@style/Theme.LazyCubeApp.SolveButton"
            android:background="@drawable/rounded_button_solve"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/solve"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cameraFadeOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#48000000"
        android:visibility="invisible">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cubeRotationHelper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/restart_btn"
        android:layout_below="@+id/scanning_subtitle"
        android:layout_marginBottom="20dp"
        android:visibility="invisible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/cube_rotate_anim"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/cube_rotate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cube_rotate_anim"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-55dp"
            android:text="@string/continue_rotation"
            android:textAlignment="center"
            android:textSize="16dp" />

    </RelativeLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/complete_tick_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/tick_animation"
        android:layout_above="@+id/boxes"
        app:lottie_loop="false" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbarParent"
        style="@style/Theme.LazyCubeApp.Snackbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/restart_btn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</RelativeLayout>